@@ -1,3 +1,8 @@
+2019-10-10 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_combobox.c: Convert plain text to internal Doxygen
+      documentation.
+
 2019-10-09 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_font_dialog.c: Add geda_font_dialog_set_font.
